@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** Jan 02, 2009**
+	Code style of the vtWidgets and vtTables subpackages has been improved.
+
 ** Jan 01, 2009**
 	PyQt4 imports changed to remove unnecessary code verbosity.
 
